recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:21: error: not found: value hexakoch
		hexakoch(levels-1, length*0.4)
                ^